<resources>
    <string name="app_name">EsayGo</string>
    <string name="setting">Setting</string>
    <string name="FaxiangExpress">EsayGo</string>
    <string name="up_notify_downloding">Download, please wait</string>
    <string name="up_notify_new_version">new version</string>
    <string name="up_notify_down_loding">downloading...</string>
    <string name="up_notify_current_progress">Current progress:</string>
    <string name="notify_invite">Notify</string>
    <string name="notify_up_allow_open_sign">The latest Android system upgrade application needs to open the permission source permission, please open the permission first!</string>
    <string name="notify_up_allow_open_err">Install app needs to open unknown source permissions</string>
    <string name="open_permission">Open permission</string>
    <string name="please_turn_on_storage_permissions">Please open storage permissions</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="jump_over">jump over</string>
    <string name="please_input_username">Please input Username</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_choose_a_store">Please choose a store</string>
    <string name="login">log in</string>
    <string name="landed_successfully">Landed successfully!</string>
    <string name="please_choose_a_store_first">Please select the store first.</string>
    <string name="logging_in">logging in</string>
    <string name="please_choose">please choose</string>
    <string name="set_up_successfully">Successful setup!</string>
    <string name="setup_failed">Setup failed!</string>
    <string name="posted">Placed</string>
    <string name="tray_number">Tray number：</string>
    <string name="number_of_packages">Number of packages:</string>
    <string name="parcel_storage_operation">Parcel storage operation</string>
    <string name="total_order_number">Total order：</string>
    <string name="click_to_enter_the_library">Click to enter the library</string>
    <string name="parcel_delivery_service_provider">Parcel delivery service provider</string>
    <string name="scanning_code_successfully">Scanning code successfully</string>
    <string name="please_scan_the_QR_cod_efor_information">Please scan the QR code for information.</string>
    <string name="make_sure_to_do_this">Make sure to do this?</string>
    <string name="submitting">submitting...</string>
    <string name="pieces"> Piece</string>
    <string name="batch_operation">Batch operation</string>
    <string name="batch_submission">Batch submission</string>
    <string name="you_have_not_selected_any_packages_yet">You have not selected any packages yet.</string>
    <string name="batch_printing">Batch printing</string>
    <string name="bluetooth_connection">Bluetooth connection...</string>
    <string name="bluetooth_is_not_turned_on_please_turn_on_Bluetooth_first">Bluetooth is not turned on, please turn on Bluetooth first</string>
    <string name="no_printing_device_found">No printing device found</string>
    <string name="bluetooth_connection_is_successful">Bluetooth connection is successful</string>
    <string name="bluetooth_connection_is_abnormal">Bluetooth connection is abnormal</string>
    <string name="batch_print_preparation">Batch print preparation</string>
    <string name="preparing">preparing...</string>
    <string name="printting">In print...</string>
    <string name="print_completed">Print completed</string>
    <string name="weight">weight</string>
    <string name="submit">submit</string>
    <string name="select_all">select all</string>
    <string name="no_no_data">No data</string>
    <string name="pay">Pay</string>
    <string name="parcel_processing">Parcel processing</string>
    <string name="successful_payment_whether_to_sign">Successful payment, do you want to sign?</string>
    <string name="signature">signature</string>
    <string name="resignature">Resignature</string>
    <string name="please_select_a_payment_order_first">Please select a payment order first</string>
    <string name="please_select_the_payment_method">Please select the payment method</string>
    <string name="please_enter_the_amount_first">Please enter the amount</string>
    <string name="amount_entered_cannot_be_less_than_amount_paid">The amount entered cannot be less than the amount to be paid</string>
    <string name="amount_entered_is_not_valid_please_re_enter">The amount entered is not valid, please re-enter</string>
    <string name="cash_payment">cash payment</string>
    <string name="balance_payment">Balance payment</string>
    <string name="bank_card_payment">Bank card payment</string>
    <string name="check_payment">Check payment</string>
    <string name="transfer_payment">Transfer payment</string>
    <string name="you_have_not_signed_yet">You have not signed yet</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_scan_the_car_logo_first">Please scan the car logo first</string>
    <string name="please_scan_a_valid_tray_number">Please scan a valid tray number</string>
    <string name="scanned_the_new_logo_whether_to_give_up_the_logo">Scanned the new logo, do you give up the logo?</string>
    <string name="the_logo_has_been_scanned">The logo has been scanned</string>
    <string name="car_label_tray_binding">Car label, tray binding</string>
    <string name="vehicle_number">Vehicle number：</string>
    <string name="current_total">Current total </string>
    <string name="tray">tray</string>
    <string name="customer_list">Reservation List</string>
    <string name="time_sorting">time sort</string>
    <string name="regional_arrangement">regional</string>
    <string name="please_scan_the_valid_QR_code">Please scan the valid QR code</string>
    <string name="please_choose_to_deliver_the_store_or_warehouse">Please choose to deliver the store or warehouse</string>
    <string name="store_to_take_the_freight_to_scan">Store to take the freight to scan</string>
    <string name="package_details">Package details: </string>
    <string name="internal_transfer_ware_scanning">Internal transfer ware scanning</string>
    <string name="store_parcel_loading_scan">Store parcel loading scan</string>
    <string name="parcel_number">Parcel number：</string>
    <string name="you_selected_cancel_delete_the_scanned_package">If you selected Cancel, then scan, delete the scanned package:</string>
    <string name="scan_cancellation">Scan cancellation</string>
    <string name="the_package_has_been_scanned">The package has been scanned</string>
    <string name="please_select_the_package_first">Please select the package first</string>
    <string name="scan_processing">Scan processing</string>
    <string name="selection_processing">Selection processing</string>
    <string name="reservation_acceptance">Reservation acceptance</string>
    <string name="change_appointment">Change appointment</string>
    <string name="call">Call</string>
    <string name="add_notes">Add notes</string>
    <string name="copy_address">Copy address</string>
    <string name="the_address_has_been_copied_to_the_pasteboard">The address has been copied to the pasteboard</string>
    <string name="single_number">Single number：</string>
    <string name="appointment">Appointment：</string>
    <string name="telephone">phone：</string>
    <string name="address">address：</string>
    <string name="client_remarks">client remarks：</string>
    <string name="appointment_note">appoint note：</string>
    <string name="expedited">expedited</string>
    <string name="domestic">domestic</string>
    <string name="to_be_paid">to paid</string>
    <string name="live_photo">Live photo</string>
    <string name="provide_live_photo_screenshots">Provide live photo screenshots</string>
    <string name="photo">image</string>
    <string name="success">success</string>
    <string name="failure">failure</string>
    <string name="I_know">I know</string>
    <string name="Order_List">Order List</string>
    <string name="please_choose_a_reason">Please choose a reason</string>
    <string name="confirm_order">confirm order</string>
    <string name="cancel_order">cancel order</string>
    <string name="parcel_weighing">Parcel weighing</string>
    <string name="print">print</string>
    <string name="sender">sender：</string>
    <string name="recipient">Recipient：</string>
    <string name="zip_code">Zip code：</string>
    <string name="order_time">order time：</string>
    <string name="content">content：</string>
    <string name="pending_order">Pending</string>
    <string name="please_get_the_package_information_first">Please get the package information first.</string>
    <string name="please_select_the_package_weight_first">Please select the package weight first.</string>
    <string name="annex">annex</string>
    <string name="take_a_photo">photograph</string>
    <string name="regain_weight">Regain weight：</string>
    <string name="are_you_sure_to_submit">Are you sure to submit?</string>
    <string name="get_the_weight_of_Bluetooth">Get the weight of Bluetooth</string>
    <string name="please_select_a_route">Please select a route</string>
    <string name="please_choose_weight">Please choose weight</string>
    <string name="current_parcel_status_can_be_weighed_by_Bluetooth">Current parcel status can be weighed by Bluetooth</string>
    <string name="below_the_minimum_setting">Below the minimum setting</string>
    <string name="exceeding_the_maximum_limit">Exceeding the maximum limit</string>
    <string name="please_select_attachment">Please select attachment</string>
    <string name="please_set_up_the_service_provider">Please set up the service provider information in the background first.</string>
    <string name="Not">not</string>
    <string name="package_cannot_operate">Parcel, can not operate</string>
    <string name="current_package_weight_is">Current package weight is</string>
    <string name="confirm_package">Confirm package</string>
    <string name="Tips">Tips：</string>
    <string name="get_weight">Get weight</string>
    <string name="whether_to_post_a_single">Whether to post a single</string>
    <string name="whether_to_expedite">Whether to expedite</string>
    <string name="freight">Freight</string>
    <string name="settlement_method">Settlement method</string>
    <string name="mailing_method">Mailing method</string>
    <string name="attachment_information">Attachment information：</string>
    <string name="total_cost_of_attachments">Total cost of attachments (</string>
    <string name="add_attachments">Add attachments</string>
    <string name="parcel_weighing_package">Parcel weighing package</string>
    <string name="parcel_status">Parcel status</string>
    <string name="route">route</string>
    <string name="please_enter_what_you_want_to_search_for">Please enter what you want to search for</string>
    <string name="pending_submission">Pending submission</string>
    <string name="to_be_confirmed">to be confirmed</string>
    <string name="confirmed">confirmed</string>
    <string name="pick_up">Pick up</string>
    <string name="Warehousing">Warehousing</string>
    <string name="transporting">transporting</string>
    <string name="please_choose_a_payment_method">choose a pay method</string>
    <string name="the_amount_entered_is_not_legal">The amount entered is not legal</string>
    <string name="recharge">Recharge</string>
    <string name="client_name">client name：</string>
    <string name="recharge_amount">Recharge amount</string>
    <string name="please_enter_a_keyword_such_as_the_package_number">Please enter a keyword such as the package number...</string>
    <string name="search_for">search for</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
</resources>