<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <include layout="@layout/common_title"/>

    <com.esaygo.app.utils.views.BounceScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rl_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5">


                <ImageView
                    android:id="@+id/iv_icon_center"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ad" />


            </RelativeLayout>


            <LinearLayout
                android:id="@+id/login_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                android:background="@drawable/shape_login_input_rounded_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp48"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:drawableStart="@mipmap/ic_login_username_default"
                        android:drawablePadding="@dimen/dp10"
                        android:hint="@string/please_input_username"
                        android:inputType="textVisiblePassword"
                        android:maxLines="1"
                        android:textColor="@color/black_80"
                        android:textColorHint="@color/gray_20"
                        android:textSize="@dimen/text_size_16" />

                    <ImageButton
                        android:id="@+id/delete_username"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:paddingStart="@dimen/dp20"
                        android:paddingEnd="@dimen/dp10"
                        android:src="@mipmap/ic_edittext_clear"
                        android:visibility="gone" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:background="@color/line_bg" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp48"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/dp8"
                    android:background="@android:color/transparent"
                    android:drawableStart="@mipmap/ic_login_password_default"
                    android:drawablePadding="@dimen/dp10"
                    android:hint="@string/please_enter_your_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black_80"
                    android:textColorHint="@color/gray_20"
                    android:textSize="@dimen/text_size_16" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:background="@color/line_bg" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50">
                    <TextView
                        android:id="@+id/txt_choose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/iv_choose"
                        android:text="记住密码"
                        android:textColor="#777777"
                        android:textSize="@dimen/sp_13"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_choose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="12dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/bg_choose_selector" />


                </RelativeLayout>
            </LinearLayout>





            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp3"
                android:layout_marginRight="@dimen/dp10"
                android:background="@drawable/shop_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp5"
                    android:text="@string/please_choose_a_store"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tx_supper_rout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:layout_marginBottom="@dimen/dp10"
                    android:background="@drawable/bg_gray"
                    android:drawableEnd="@mipmap/chooise_down"
                    android:drawablePadding="@dimen/dp10"
                    android:padding="@dimen/dp5"
                    android:text=""
                    android:textColor="@color/black_80" />

            </LinearLayout>

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp50"
                android:layout_marginRight="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10"
                android:background="@drawable/shape_corner_btn_blue"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </com.esaygo.app.utils.views.BounceScrollView>
</FrameLayout>